Change configure to directly depend on some packages.
configure.ag: drop use of AM_MONETDB_TOOLS and AM_MONETDB_LIBS, use
separate includes instead, as needed.  Change checks to pkg-config
checks where possible.  Use AM_ICONV to detect iconv support properly.
conf/config.rpath: necessary for AM_ICONV
Makefile.ag: include conf/config.rpath, for AM_ICONV
src/mapiclient/Makefile.ag: don't need socket support, link against
iconv only for mclient
src/mapilib/Makefile.ag: use openssl includes/libs from pkg-config

--- a/clients/src/mapiclient/Makefile.ag
+++ b/clients/src/mapiclient/Makefile.ag
@@ -16,9 +16,7 @@
 # All Rights Reserved.
 
 MTSAFE
-INCLUDES = -I.. $(monetdbtools_CFLAGS) $(READLINE_INCS) $(ICONV_CFLAGS)
-
-MAPI_LIBS = $(SOCKET_LIBS) $(ICONV_LIBS)
+INCLUDES = -I.. $(monetdbtools_CFLAGS) $(READLINE_INCS)
 
 lib_mcutil = {
 	NOINST
@@ -28,20 +26,18 @@ lib_mcutil = {
 #Name alignment of tools in M5 context. 
 bin_mclient = {
 	SOURCES = mclient.c ReadlineTools.c ReadlineTools.h
-	LIBS = libmcutil ../mapilib/libMapi $(MAPI_LIBS) $(READLINE_LIBS) \
-		$(monetdbtools_LIBS) $(ICONV_LIBS)
+	LIBS = libmcutil ../mapilib/libMapi $(READLINE_LIBS) \
+		$(monetdbtools_LIBS) $(LTLIBICONV)
 }
 
 bin_msqldump = {
 	SOURCES = msqldump.c
-	LIBS = libmcutil ../mapilib/libMapi $(MAPI_LIBS) \
-		$(monetdbtools_LIBS) $(ICONV_LIBS)
+	LIBS = libmcutil ../mapilib/libMapi $(monetdbtools_LIBS)
 }
 
 bin_stethoscope = {
 	SOURCES = stethoscope.c
-	LIBS = libmcutil \
-		   ../mapilib/libMapi $(MAPI_LIBS) \
+	LIBS = libmcutil ../mapilib/libMapi \
 		   $(monetdbtools_LIBS) $(MALLOC_LIBS) $(PTHREAD_LIBS)
 }
 
