--- a/clients/Makefile.ag
+++ b/clients/Makefile.ag
@@ -17,7 +17,7 @@
 
 SUBDIRS = src conf
 
-EXTRA_DIST = configure.ag rpm.mk.in \
+EXTRA_DIST = conf/config.rpath configure.ag rpm.mk.in \
 		MonetDB-client.spec MonetDB-client.spec \
 		RunMtest.in RunMtest.bat.in \
 		RunMapprove.in \
