--- a/MonetDB5/conf/monetdb5.conf.in
+++ b/MonetDB5/conf/monetdb5.conf.in
@@ -199,8 +199,7 @@ sql_optimizer=default_pipe
 minimal_pipe=inline,remap,deadcode,multiplex,garbageCollector
 #
 # The default pipe line contains as of Feb2010
-# mitosis-mergetable-reorder, aimed at large tables and improved access
-# locality
+# mitosis-mergetable-reorder, aimed at large tables and improved access locality
 default_pipe=inline,remap,evaluate,costModel,coercions,emptySet,aliases,mitosis,mergetable,deadcode,commonTerms,joinPath,reorder,deadcode,reduce,dataflow,history,multiplex,garbageCollector
 #
 # The no_mitosis pipe line is (and should be kept!) identical to the default
