Various fixes to be able to build RPMs. Added missing files to various EXTRA_DIST variables in Makefiles. Fixed .spec file to include correct and complete list of files.

--- a/sql/src/backends/monet5/merovingian/daemon/Makefile.ag
+++ b/sql/src/backends/monet5/merovingian/daemon/Makefile.ag
@@ -33,7 +33,7 @@ EXTRA_DIST = $(man_MANS) \
 	forkmserver.h \
 	handlers.h \
 	peering.h \
-	proxy.c
+	proxy.h
 
 bin_monetdbd = {
 	# hack: include merovingian.1.in here to get it expanded
