--- a/sql/src/storage/Makefile.ag
+++ b/sql/src/storage/Makefile.ag
@@ -19,7 +19,8 @@
 
 #EXTRA_HEADERS = sql_storage.h
 
-EXTRA_DIST = sql_storage.h
+EXTRA_DIST = sql_storage.h store_connections.h store_dependency.h \
+	store_sequence.h
 
 SUBDIRS = bat restrict m4 bpm 
 
