--- a/sql/src/storage/bat/Makefile.ag
+++ b/sql/src/storage/bat/Makefile.ag
@@ -26,3 +26,5 @@ lib_batstore = {
 		bat_table.c bat_storage.c bat_logger.c bat_utils.c \
 		res_table.c 
 }
+
+EXTRA_DIST = bat_logger.h bat_storage.h bat_table.h bat_utils.h res_table.h
