--- a/clients/src/mapiclient/Makefile.ag
+++ b/clients/src/mapiclient/Makefile.ag
@@ -25,7 +25,7 @@ lib_mcutil = {
 
 #Name alignment of tools in M5 context. 
 bin_mclient = {
-	SOURCES = mclient.c ReadlineTools.c ReadlineTools.h
+	SOURCES = mclient.c ReadlineTools.c
 	LIBS = libmcutil ../mapilib/libMapi $(READLINE_LIBS) \
 		$(monetdbtools_LIBS) $(LTLIBICONV)
 }
@@ -43,6 +43,6 @@ bin_stethoscope = {
 
 man_MANS = mclient.1
 
-EXTRA_DIST = msqldump.h mprompt.h $(man_MANS)
+EXTRA_DIST = msqldump.h mprompt.h ReadlineTools.h $(man_MANS)
 
 EXTRA_DIST_DIR = Tests
