--- a/sql/src/common/Makefile.ag
+++ b/sql/src/common/Makefile.ag
@@ -26,3 +26,5 @@ lib_sqlcommon = {
 		sql_mem.c sql_list.c sql_backend.c \
 		sql_keyword.c sql_changeset.c sql_types.c sql_string.c
 }
+
+EXTRA_DIST = sql_backend.h sql_string.h sql_types.h
