--- a/MonetDB5/src/modules/kernel/Makefile.ag
+++ b/MonetDB5/src/modules/kernel/Makefile.ag
@@ -121,6 +121,20 @@ lib__sphinx = {
 		$(SPHINXCLIENT_LIBS) ../../mal/libmonetdb5
 }
 
+headers_sphinx_h = {
+	COND = HAVE_SPHINXCLIENT
+	DIR = includedir/MonetDB5/kernel
+	SOURCES = sphinx.mx
+	HEADERS = h 
+}
+
+headers_sphinx_mal = {
+	COND = HAVE_SPHINXCLIENT
+	HEADERS = mal
+	DIR = libdir/MonetDB5
+	SOURCES = sphinx.mx
+}
+
 headers_h = {
 	DIR = includedir/MonetDB5/kernel
 	SOURCES = \
@@ -131,8 +145,7 @@ headers_h = {
 		aggr_be_sum.mx aggr_be_prod.mx aggr_be_avg.mx aggr_be_minmax.mx aggr_be_count.mx \
 		aggr_bge_sum.mx aggr_bge_prod.mx aggr_bge_avg.mx aggr_bge_minmax.mx aggr_bge_count.mx \
 		counters.mx microbenchmark.mx \
-		batstr.mx batmtime.mx batcolor.mx group.mx array.mx logger.mx \
-		sphinx.mx
+		batstr.mx batmtime.mx batcolor.mx group.mx array.mx logger.mx
 	HEADERS = h 
 }
 
@@ -143,8 +156,7 @@ headers_mal = {
 		mmath.mx lock.mx sema.mx alarm.mx batstr.mx batmtime.mx \
 		batcolor.mx batifthen.mx batcast.mx batcalc.mx batmmath.mx \
 		group.mx aggr.mx array.mx \
-		counters.mx logger.mx microbenchmark.mx \
-		sphinx.mx
+		counters.mx logger.mx microbenchmark.mx
 }
 
 EXTRA_DIST_DIR = Tests
