--- a/MonetDB5/src/modules/mal/Makefile.ag
+++ b/MonetDB5/src/modules/mal/Makefile.ag
@@ -176,6 +176,20 @@ lib__statistics = {
                 $(MALLOC_LIBS) $(PTHREAD_LIBS) $(DL_LIBS)
 }
 
+headers_batxml_h = {
+	COND = HAVE_LIBXML2
+	DIR = includedir/MonetDB5/mal
+	SOURCES = batxml.mx
+	HEADERS = h 
+}
+
+headers_batxml_mal = {
+	COND = HAVE_LIBXML2
+	HEADERS = mal
+	DIR = libdir/MonetDB5
+	SOURCES = batxml.mx
+}
+
 headers_h = {
 	DIR = includedir/MonetDB5/mal
 	SOURCES = batExtensions.mx bpm.mx mal_mapi.mx mal_io.mx clients.mx \
@@ -185,7 +199,7 @@ headers_h = {
 		inspect.mx manual.mx pqueue.mx mkey.mx \
 		factories.mx groupby.mx mdb.mx  \
 		urlbox.mx mat.mx histogram.mx \
-		sabaoth.mx remote.mx  batxml.mx  recycle.mx \
+		sabaoth.mx remote.mx  recycle.mx \
 		cluster.mx trader.mx replication.mx pma.mx \
 		tokenizer.mx zorder.mx
 		#radix.mx 
@@ -203,7 +217,7 @@ headers_mal = {
 		factories.mx groupby.mx mdb.mx pcre.mx  tablet.mx mat.mx histogram.mx \
 		urlbox.mx statistics.mx transaction.mx \
 		mal_mapi.mx sabaoth.mx remote.mx  \
-		bpm.mx batxml.mx txtsim.mx recycle.mx \
+		bpm.mx txtsim.mx recycle.mx \
 		cluster.mx trader.mx replication.mx pma.mx \
 		tokenizer.mx zorder.mx
 	#radix.mx
