install rdf.sql conditinally only if MonetDB5 server comes with RDF support, i.e., in case libraptor was available when MonetDB5 was build; otherwise, rdf.sql is of no use at all.

--- a/sql/src/sql/Makefile.ag
+++ b/sql/src/sql/Makefile.ag
@@ -22,6 +22,13 @@ headers_sql = {
 	DIR = libdir/MonetDB5
 	SOURCES = \
 		createdb.mx \
-		cache.sql octopus.sql parts.sql rdf.sql \
+		cache.sql octopus.sql parts.sql \
 		replication.sql temporal.sql vacuum.sql
+}
+
+headers_rdf = {
+	COND = HAVE_MONETDB5_RDF
+	HEADERS = sql
+	DIR = libdir/MonetDB5
+	SOURCES = rdf.sql
 }
