Add generated keys test based on supposed bug from one of our partners. Test works fine here, though.

--- a/java/tests/Makefile.ag
+++ b/java/tests/Makefile.ag
@@ -22,6 +22,7 @@ EXTRA_DIST = \
 		Test_Creplysize.java \
 		Test_Csavepoints.java \
 		Test_Ctransaction.java \
+		Test_PSgeneratedkeys.java \
 		Test_PStimedate.java \
 		Test_PStimezone.java \
 		Test_PStypes.java \
