--- a/java/tests/build.xml
+++ b/java/tests/build.xml
@@ -107,6 +107,7 @@ All Rights Reserved.
     <antcall target="Test_Creplysize" />
     <antcall target="Test_Csavepoints" />
     <antcall target="Test_Ctransaction" />
+    <antcall target="Test_PSgeneratedkeys" />
     <antcall target="Test_PSlargeresponse" />
     <antcall target="Test_PStimedate" />
     <antcall target="Test_PStimezone" />
@@ -179,6 +180,12 @@ All Rights Reserved.
   <target name="Test_Sbatching">
     <antcall target="test_class">
       <param name="test.class" value="Test_Sbatching" />
+    </antcall>
+  </target>
+
+  <target name="Test_PSgeneratedkeys">
+    <antcall target="test_class">
+      <param name="test.class" value="Test_PSgeneratedkeys" />
     </antcall>
   </target>
 
