lock.mx uses MT_lock_*, windows doesn't do indirect linking, so add pthread to satisfy the pthread lock symbols

--- a/MonetDB5/src/modules/kernel/Makefile.ag
+++ b/MonetDB5/src/modules/kernel/Makefile.ag
@@ -33,7 +33,7 @@ LIBS = {
 
 	#SCRIPTS = mal mil ""
 	LIBS = $(MONETDB_LIBS) -lbat -lstream $(MATH_LIBS) \
-                $(MALLOC_LIBS) ../../mal/libmonetdb5
+                $(PTHREAD_LIBS) $(MALLOC_LIBS) ../../mal/libmonetdb5
 }
 
 lib__aggr = {
