Print timeout message earlier to avoid race condition. Since the killing happens in a separate thread, the main thread may close the outfile before we get to writing to it in the killProc thread.

--- a/testing/src/Mtest.py.in
+++ b/testing/src/Mtest.py.in
@@ -2164,15 +2164,18 @@ def Prompt(cmd) :
 ### Prompt(cmd) #
 
 def killProc(proc, outfile = None, cmd = None):
+    if outfile is not None and cmd is not None:
+        try:
+            outfile.write('\n!Mtimeout: Timeout: %s\n' % cmd)
+        except ValueError:
+            print 'cannot write timeout message',cmd
+    proc.killed = True
     try:
         os.kill(-proc.pid, signal.SIGKILL)
     except AttributeError:
         subprocess.Popen(['taskkill','/F','/T','/PID',str(proc.pid)])
     except OSError:
         pass
-    if outfile is not None and cmd is not None:
-        outfile.write('\n!Mtimeout: Timeout: %s\n' % cmd)
-    proc.killed = True
 
 def LaunchIt(cmd, TestInput, TestOut, TestErr, TimeOut, SrvrOut = None) :
     if not SrvrOut:
