--- a/testing/src/Mtest.py.in
+++ b/testing/src/Mtest.py.in
@@ -50,6 +50,8 @@ import select
 #import getpass
 import Mfilter
 
+verbose = False
+
 # Python 2.3 doesn't know about os.devnull...
 try:
     os.devnull
@@ -150,8 +152,12 @@ def CheckExec(cmd) :
 
 def GetConfig(cfg, arg) :
     cmd = CheckExec(cfg)
+    if verbose:
+        print 'GetConfig: starting process "%s" "%s" (inpipe, outpipe)\n' % (cmd, arg)
     proc = subprocess.Popen([cmd,arg], stdin = subprocess.PIPE, stdout = subprocess.PIPE, universal_newlines = True)
     qOut, qErr = proc.communicate()
+    if verbose:
+        print 'GetConfig: process exited "%s" "%s" (%s)\n' % (cmd, arg, proc.returncode)
     return _configure(qOut.split('\n', 1)[0].strip())
 ### GetConfig(pkg, arg) #
 
@@ -215,8 +221,12 @@ CONDITIONALS = {
 def GetCONDITIONALS(CONDS, pkg) :
     cfg = pkg+'-config'
     cmd = CheckExec(cfg)
+    if verbose:
+        print 'GetCONDITIONALS: starting process "%s" "--conds" (inpipe, outpipe)\n' % cmd
     proc = subprocess.Popen([cmd,'--conds'], stdin = subprocess.PIPE, stdout = subprocess.PIPE, universal_newlines = True)
     qOut, qErr = proc.communicate()
+    if verbose:
+        print 'GetCONDITIONALS: process exited "%s" "--conds" (%s)\n' % (cmd, proc.returncode)
     r = re.compile('^(.*)=(.*)$')
     for l in qOut.split('\n'):
         m = r.match(l.strip())
@@ -1233,6 +1243,8 @@ def GetBitsAndOIDsAndModsAndStatic(env) :
     rtrn = 0
     TSTPREF = env['TSTPREF']
     cmd = '%s --dbname=%s' % (env['exe']['Mserver'][1], TSTPREF)
+    if verbose:
+        print 'GetBitsAndOIDsAndModsAndStatic: starting process "%s" (inpipe, outpipe, errpipe)\n' % cmd
     proc = subprocess.Popen(cmd, shell = True, stdin = subprocess.PIPE, stdout = subprocess.PIPE, stderr = subprocess.PIPE, universal_newlines = True)
     t = Timer(float(par['TIMEOUT']), killProc, args = [proc, proc.stderr, cmd])
     try:
@@ -1275,9 +1287,13 @@ def GetBitsAndOIDsAndModsAndStatic(env) :
         ##module("NoModule");
         qOut, qErr = proc.communicate(input = input)
         t.cancel()
+        if verbose:
+            print 'GetBitsAndOIDsAndModsAndStatic: process exited "%s" (%s)\n' % (cmd, proc.returncode)
     except KeyboardInterrupt:
         t.cancel()
         killProc(proc, proc.stderr, cmd)
+        if verbose:
+            print 'GetBitsAndOIDsAndModsAndStatic: process killed "%s"\n' % cmd
         raise
     env['TST_MODS'] = []
     env['TST_BITS'] = ""
@@ -1372,6 +1388,8 @@ def CheckBATs(env, TST, TSTDB) :
         return missing
 
     cmd = '%s --dbname=%s' % (env['exe']['Mserver'][1], TSTDB)
+    if verbose:
+        print 'CheckBATs: starting process "%s" (inpipe, outpipe, errpipe)\n' % cmd
     proc = subprocess.Popen(cmd, shell = True, stdin = subprocess.PIPE, stdout = subprocess.PIPE, stderr = subprocess.PIPE, universal_newlines = True)
     t = Timer(float(par['TIMEOUT']), killProc, args = [proc, proc.stderr, cmd])
     try:
@@ -1392,9 +1410,13 @@ def CheckBATs(env, TST, TSTDB) :
             quit();
         ''')
         t.cancel()
+        if verbose:
+            print 'CheckBATs: process exited "%s" (%s)\n' % (cmd, proc.returncode)
     except KeyboardInterrupt:
         t.cancel()
         killProc(proc, proc.stderr, cmd)
+        if verbose:
+            print 'CheckBATs: process killed "%s"\n' % cmd
         raise
     TST_BATS = []
     if qOut:
@@ -1435,8 +1457,12 @@ def CheckTests(env, TST, oktests):
 ### CheckTests(env, TST, oktests) #
 
 def StartAt(cmd) :
+    if verbose:
+        print 'StartAt: starting process "%s" (inpipe, outpipe, errpipe)\n' % cmd
     proc = subprocess.Popen(cmd, shell = True, stdin = subprocess.PIPE, stdout = subprocess.PIPE, stderr = subprocess.PIPE, universal_newlines = True)
     qOut, qErr = proc.communicate()
+    if verbose:
+        print 'StartAt: starting exited "%s"\n' % cmd
     return qOut.split('\n', 1)[0].strip()
 ### StartAt(cmd) #
 
@@ -1972,6 +1998,11 @@ def RunTest(env, TST, BusyPorts, COND, oktests) :
                     cmd.append('-d')
                 if quiet:
                     cmd.append('-q')
+                if verbose:
+                    print 'RunTest: starting process',
+                    for a in cmd + ['-F^#', '-I%s' % par['IGNORE'], '-C%s' % par['CONTEXT'], '-A%d' % ACCURACYout, '-r%s' % REVe, '%s%s.FILTERED' % (TST, STABLEout), '%s.test.out.FILTERED' % TST, '%s.out.diff.html' % TST]:
+                        print '"%s"' % a,
+                    print '\n'
                 proc = subprocess.Popen(cmd + ['-F^#', '-I%s' % par['IGNORE'], '-C%s' % par['CONTEXT'], '-A%d' % ACCURACYout, '-r%s' % REVe, '%s%s.FILTERED' % (TST, STABLEout), '%s.test.out.FILTERED' % TST, '%s.out.diff.html' % TST])
                 proc.killed = False
                 t = Timer(float(par['TIMEOUT']), killProc, args = [proc])
@@ -1979,9 +2010,19 @@ def RunTest(env, TST, BusyPorts, COND, oktests) :
                     t.start()
                     proc.wait()
                     t.cancel()
+                    if verbose:
+                        print 'RunTest: process exited',
+                        for a in cmd + ['-F^#', '-I%s' % par['IGNORE'], '-C%s' % par['CONTEXT'], '-A%d' % ACCURACYout, '-r%s' % REVe, '%s%s.FILTERED' % (TST, STABLEout), '%s.test.out.FILTERED' % TST, '%s.out.diff.html' % TST]:
+                            print '"%s"' % a,
+                        print '(%s)\n' % proc.returncode
                 except KeyboardInterrupt:
                     t.cancel()
                     killProc(proc)
+                    if verbose:
+                        print 'RunTest: process killed',
+                        for a in cmd + ['-F^#', '-I%s' % par['IGNORE'], '-C%s' % par['CONTEXT'], '-A%d' % ACCURACYout, '-r%s' % REVe, '%s%s.FILTERED' % (TST, STABLEout), '%s.test.out.FILTERED' % TST, '%s.out.diff.html' % TST]:
+                            print '"%s"' % a,
+                        print '\n'
                     raise
                 timedout = proc.killed
                 ACCURACYout = ACCURACYout - 1
@@ -2173,7 +2214,11 @@ def killProc(proc, outfile = None, cmd = None):
     try:
         os.kill(-proc.pid, signal.SIGKILL)
     except AttributeError:
-        subprocess.Popen(['taskkill','/F','/T','/PID',str(proc.pid)])
+        if verbose:
+            print 'killProc: starting process "taskkill" "/F" "/T" "/PID" "%s"\n' % str(proc.pid)
+        subprocess.Popen(['taskkill','/F','/T','/PID',str(proc.pid)]).wait()
+        if verbose:
+            print 'killProc: process exited "taskkill" "/F" "/T" "/PID" "%s" (%s)\n' % (str(proc.pid), proc.returncode)
     except OSError:
         pass
 
@@ -2186,6 +2231,8 @@ def LaunchIt(cmd, TestInput, TestOut, TestErr, TimeOut, SrvrOut = None) :
     TestErr.write(Prompt(cmd))
     TestErr.flush()
 
+    if verbose:
+        print 'LaunchIt: starting process "%s" (inpipe)\n' % cmd
     proc = subprocess.Popen(cmd, shell = True, stdin = subprocess.PIPE, stdout = SrvrOut, stderr = TestErr, universal_newlines = True)
     proc.killed = False
     t = Timer(TimeOut, killProc, args = [proc, TestErr, cmd])
@@ -2220,6 +2267,8 @@ def RunIt(cmd, TestIn, TestOut, TestErr, TimeOut) :
     TestOut.flush()
     TestErr.write(Prompt(cmd))
     TestErr.flush()
+    if verbose:
+        print 'RunIt: starting process "%s"\n' % cmd
     proc = subprocess.Popen(cmd, shell = True, stdin = TestIn, stdout = TestOut, stderr = TestErr, universal_newlines = True)
     proc.killed = False
     t = Timer(TimeOut, killProc, args = [proc, TestErr, cmd])
@@ -2229,9 +2278,13 @@ def RunIt(cmd, TestIn, TestOut, TestErr, TimeOut) :
         # communicate will not return any useful data
         proc.communicate(input = TestInput)
         t.cancel()
+        if verbose:
+            print 'RunIt: process exited "%s" (%s)\n' % (cmd, proc.returncode)
     except KeyboardInterrupt:
         t.cancel()
         killProc(proc, TestErr, cmd)
+        if verbose:
+            print 'RunIt: process killed "%s"\n' % cmd
         raise
     return proc.killed
 ### RunIt(cmd, TestIn, TestOut, TestErr) #
@@ -2515,6 +2568,8 @@ def DoIt(env, SERVER, CALL, TST, EXT, PRELUDE, TestOutFile, TestErrFile, STIMEOU
             CollectIt(pSrvr.stdout, SrvrOut)
             pSrvr.wait()
             pSrvrTimer.cancel()
+            if verbose:
+                print 'DoIt: process exited "%s" (%s)\n' % (Srvr, pSrvr.returncode)
             pSrvrTimer = None
             timedout = timedout or pSrvr.killed
             if MkillUsersAT:
@@ -2615,15 +2670,21 @@ def DoIt(env, SERVER, CALL, TST, EXT, PRELUDE, TestOutFile, TestErrFile, STIMEOU
 ### DoIt(env, SERVER, CALL, TST, EXT, PRELUDE, TestOut, TestErr, STIMEOUT, CTIMEOUT, TIMEOUT, MkillUsersAT, ME, MAPIsockets, XRPCsockets) #
 
 def Check(command, input) :
+    if verbose:
+        print 'Check: starting process "%s" (inpipe,outpipe,errpipe)\n' % command
     proc = subprocess.Popen(command, shell = True, stdin = subprocess.PIPE, stdout = subprocess.PIPE, stderr = subprocess.PIPE, universal_newlines = True)
     t = Timer(float(par['TIMEOUT']), killProc, args = [proc])
     try:
         t.start()
         qOut, qErr = proc.communicate(input = input)
         t.cancel()
+        if verbose:
+            print 'Check: process exited "%s" (%s)\n' % (command, proc.returncode)
     except KeyboardInterrupt:
         t.cancel()
         killProc(proc)
+        if verbose:
+            print 'Check: process killed "%s"\n' % command
         raise
     qOut = qOut.split('\n')
     qErr = qErr.split('\n')
@@ -2800,8 +2861,12 @@ if os.name == "nt":
     SYST    = "Windows"
     RELEASE = "5.0"
     r = re.compile('^Microsoft Windows (.*)\[Version ([0-9]+\.[0-9]+)([^\[0-9].*)\]$')
+    if verbose:
+        print 'starting process "cmd" "/c" "ver" (inpipe,outpipe)\n'
     proc = subprocess.Popen('cmd /c ver', stdin = subprocess.PIPE, stdout = subprocess.PIPE, universal_newlines = True)
     qOut, qErr = proc.communicate()
+    if verbose:
+        print 'process exited "cmd" "/c" "ver" (%s)\n' % proc.returncode
     for l in qOut.split('\n'):
         m = r.match(l.strip())
         if m and m.group(2):
@@ -2958,8 +3023,12 @@ elif os.path.exists(os.path.join('.svn', 'entries')):
             repo = fnd.group(1).strip()
 else:
     try:
+        if verbose:
+            print 'starting process "hg" "root" (inpipe,outpipe)\n'
         proc = subprocess.Popen(['hg','root'], stdin = subprocess.PIPE, stdout = subprocess.PIPE, universal_newlines = True)
         out,err = proc.communicate()
+        if verbose:
+            print 'process exited "hg" "root" (%s)\n' % proc.returncode
         if out:
             hgr = os.path.normcase(os.path.normpath(os.path.realpath(out.strip())))
             cwd = os.path.normcase(os.path.normpath(os.path.realpath(os.getcwd())))
@@ -2987,6 +3056,7 @@ if repo:
 dft = {}
 
 def main(argv) :
+    global verbose
     #TODO:
     #signal.signal(signal.SIGALRM, AlarmHandler)
 
@@ -3044,6 +3114,7 @@ def main(argv) :
          'default: `<package>-config --prefix` = "%s"' % GetMonetConfig(par['PACKAGE'],'--prefix')),
         ('quiet', 'q', 'quiet', None,
          "suppress messages on stdout"),
+        ('verbose', None, 'verbose', None, 'be verbose'),
         ]
 
     if THISFILE == "Mtest.py":
@@ -3181,6 +3252,7 @@ def main(argv) :
         ErrXit('"-G/--algebra" conflicts with "-g/--no-algebra"!')
     par['RECURSIVE'] = opts.get('recursive', 0)
     par['QUIET'] = opts.get('quiet', 0)
+    verbose = opts.get('verbose', 0)
     if THISFILE == "Mtest.py":
         _IGNORE = dftIGNORE
         par['IGNORE'] = opts.get('ignore', _IGNORE)
@@ -3719,8 +3791,12 @@ def main(argv) :
                 CONDITIONALS['NOT_ALGEBRA']  = '#'
                 rA = re.compile('-A.* \(default\)')
                 rM = re.compile('-M.* \(default\)')
+                if verbose:
+                    print 'main: starting process "pf" "-h" (inpipe,outpipe)\n'
                 proc = subprocess.Popen(['pf','-h'], stdin = subprocess.PIPE, stdout = subprocess.PIPE, universal_newlines = True)
                 qOut, qErr = proc.communicate()
+                if verbose:
+                    print 'main: process exited "pf" "-h" (%s)\n' % proc.returncode
                 if rA.search(qOut) is not None:
                     CONDITIONALS['WITH_ALGEBRA'] = '#'
                     CONDITIONALS['NOT_ALGEBRA']  = ''
