Recognize - in mclient as a file name to refer to the standard input. Also updated manual page and create a man page for msqldump.

--- a/clients/src/mapiclient/Makefile.ag
+++ b/clients/src/mapiclient/Makefile.ag
@@ -48,7 +48,7 @@ bin_stethoscope = {
 		   $(MALLOC_LIBS) $(PTHREAD_LIBS)
 }
 
-man_MANS = mclient.1
+man_MANS = mclient.1 msqldump.1
 
 EXTRA_DIST = msqldump.h mprompt.h $(man_MANS)
 
