--- a/pathfinder/src/tools/embeddedclient.c.in
+++ b/pathfinder/src/tools/embeddedclient.c.in
@@ -49,7 +49,11 @@ Monet_init(opt **set, int setlen)
 static opt *embedded_set = NULL;
 static int embedded_len = 0;
 
+#if !defined(HAVE_PTHREAD_H) && defined(_MSC_VER)
+static DWORD WINAPI
+#else
 static void *
+#endif
 start_xq_server(void *arg)
 {
 	static int initialized = 0;
@@ -77,14 +81,18 @@ start_xq_server(void *arg)
 	snprintf(buf, sizeof(buf), "client(Stream(\"" PTRFMT "\"), Stream(\"" PTRFMT "\"));", PTRFMTCAST in, PTRFMTCAST out);
 	monet_exec("module(pathfinder);xquery_start_query_cache(16000000LL);");
 	monet_exec(buf);
-	return NULL;
+	return 0;
 }
 
 Mapi
 embedded_xquery(opt *set, int len)
 {
 	Mapi mid;
+#if !defined(HAVE_PTHREAD_H) && defined(_MSC_VER)
+	HANDLE xqthread;
+#else
 	pthread_t xqthread;
+#endif
 	stream **server;
 
 	if (set) {
@@ -93,7 +101,11 @@ embedded_xquery(opt *set, int len)
 	}
 	server = mapi_embedded_init(&mid,"xquery");
 
+#if !defined(HAVE_PTHREAD_H) && defined(_MSC_VER)
+	xqthread = CreateThread(NULL, 0, start_xq_server, (void *) server, 0, NULL);
+#else
 	pthread_create(&xqthread, NULL, start_xq_server, (void *) server);
+#endif
 
 	mapi_start_talking(mid);
 
