--- a/sql/src/backends/monet5/embeddedclient.c.in
+++ b/sql/src/backends/monet5/embeddedclient.c.in
@@ -50,7 +50,11 @@ Monet_init(opt **set, int setlen)
 static opt *embedded_set = NULL;
 static int embedded_len = 0;
 
+#if !defined(HAVE_PTHREAD_H) && defined(_MSC_VER)
+static DWORD WINAPI
+#else
 static void *
+#endif
 start_sql_server(void *arg)
 {
 	static int initialized = 0;
@@ -105,14 +109,18 @@ start_sql_server(void *arg)
 		"out := \"" PTRFMT "\":streams;\n"
 		"mapi.malclient(in, out);\n", PTRFMTCAST in, PTRFMTCAST out);
 	callString(mal_clients, buf, 0);
-	return NULL;
+	return 0;
 }
 
 Mapi
 embedded_sql(opt *set, int len)
 {
 	Mapi mid;
+#if !defined(HAVE_PTHREAD_H) && defined(_MSC_VER)
+	HANDLE sqlthread;
+#else
 	pthread_t sqlthread;
+#endif
 	stream **server;
 
 	if (set) {
@@ -121,7 +129,11 @@ embedded_sql(opt *set, int len)
 	}
 	server = mapi_embedded_init(&mid,"sql");
 
+#if !defined(HAVE_PTHREAD_H) && defined(_MSC_VER)
+	sqlthread = CreateThread(NULL, 0, start_sql_server, (void *) server, 0, NULL);
+#else
 	pthread_create(&sqlthread, NULL, start_sql_server, (void *) server);
+#endif
 
 	mapi_start_talking(mid);
 
@@ -132,7 +144,11 @@ Mapi
 monetdb_sql(char *dbfarm, char *dbname)
 {
 	Mapi mid;
+#if !defined(HAVE_PTHREAD_H) && defined(_MSC_VER)
+	HANDLE sqlthread;
+#else
 	pthread_t sqlthread;
+#endif
 	stream **server;
 
 	int len = mo_builtin_settings(&embedded_set);
@@ -149,7 +165,11 @@ monetdb_sql(char *dbfarm, char *dbname)
 
 	server = mapi_embedded_init(&mid,"sql");
 
+#if !defined(HAVE_PTHREAD_H) && defined(_MSC_VER)
+	sqlthread = CreateThread(NULL, 0, start_sql_server, (void *) server, 0, NULL);
+#else
 	pthread_create(&sqlthread, NULL, start_sql_server, (void *) server);
+#endif
 
 	mapi_start_talking(mid);
 
