--- a/MonetDB5/src/tools/Makefile.ag
+++ b/MonetDB5/src/tools/Makefile.ag
@@ -18,9 +18,24 @@
 MTSAFE
 INCLUDES = -I../mal $(CLIENTS_INCS) $(MONETDB_INCS) $(OPENSSL_INCS) $(PCRE_CFLAGS) $(LIBXML2_CFLAGS)
 
+lib_monetdb5 = {
+	NAME = monetdb5
+	SCRIPTS = mal
+	DIR = libdir
+	SOURCES = libmonetdb5.rc
+	LIBS = ../mal/libmal ../modules/atoms/libatoms \
+		../modules/kernel/libkernel ../modules/mal/libmal \
+		../optimizer/liboptimizer ../scheduler/libscheduler \
+		$(MONETDB_LIBS) -lbat -lstream \
+		$(CLIENTS_LIBS) -lMapi \
+		$(MATH_LIBS) $(SOCKET_LIBS) $(Z_LIBS) $(BZ_LIBS) \
+	    $(MALLOC_LIBS) $(PTHREAD_LIBS) $(DL_LIBS) \
+	    $(READLINE_LIBS) $(OPENSSL_LIBS) $(PCRE_LIBS)
+}
+
 bin_mserver5 = {
 	SOURCES = mserver5.mx monet_version.h monet_version.c.in
-	LIBS = ../mal/libmonetdb5 @SHARED_LIBS@ $(MONETDB_LIBS) \
+	LIBS = libmonetdb5 @SHARED_LIBS@ $(MONETDB_LIBS) \
                 -lbat -lmutils -lstream \
                 $(SOCKET_LIBS) $(Z_LIBS) $(BZ_LIBS) \
                 $(MALLOC_LIBS) $(PTHREAD_LIBS) $(DL_LIBS) \
@@ -29,7 +44,7 @@ bin_mserver5 = {
 
 lib_embeddedmal = {
 	SOURCES = embeddedclient.c.in
-	LIBS = ../mal/libmonetdb5 @SHARED_LIBS@ $(MONETDB_LIBS) -lbat -lmutils -lstream $(CLIENTS_LIBS) -lMapi \
+	LIBS = libmonetdb5 @SHARED_LIBS@ $(MONETDB_LIBS) -lbat -lmutils -lstream $(CLIENTS_LIBS) -lMapi \
                 $(SOCKET_LIBS) $(Z_LIBS) $(BZ_LIBS) \
                 $(MALLOC_LIBS) $(PTHREAD_LIBS) $(DL_LIBS)
 }
@@ -51,7 +66,7 @@ headers_pc = {
 	COND = NOT_WIN32
 	HEADERS = pc
 	DIR = libdir/pkgconfig
-	SOURCES = monetdb-embeddedclient.pc.in
+	SOURCES = monetdb-mal.pc.in monetdb-embeddedclient.pc.in
 }
 
 EXTRA_DIST_DIR = Tests
