sysdefs.h.in: remove
sysdefs.h.in seems to contain static knowledge that is no longer
necessary at least on our setups.  The include gives problems because
there is no pkg-config thing for it.  If it is necessary, we should add
it to e.g. mutils instead of putting it here.

--- a/MonetDB/Makefile.ag
+++ b/MonetDB/Makefile.ag
@@ -17,9 +17,6 @@
 
 SUBDIRS = src conf
 
-EXTRA_DIST = configure.ag rpm.mk.in sysdefs.h.in \
-		MonetDB.spec MonetDB.spec
+EXTRA_DIST = configure.ag rpm.mk.in MonetDB.spec
 
 EXTRA_DIST_DIR = NT debian
-
-EXTRA_HEADERS = sysdefs.h
