Steps towards being able to compile MonetDB5 again on Windows. We're not there yet.

--- a/MonetDB5/vertoo.config
+++ b/MonetDB5/vertoo.config
@@ -25,7 +25,7 @@ main.addAnchors("NT/MonetDB5-Server/MonetDB5-Server64.vdproj",
                           format = '@normal'),
                 arguments(pattern = '"Value" = "8:%v"',
                           format = '@normal'))
-main.addAnchors("src/mal/libmonetdb5.rc",
+main.addAnchors("src/tools/libmonetdb5.rc",
                 'VALUE "FileVersion", "%v\\0"',
                 'VALUE "ProductVersion", "%v\\0"',
                 arguments(pattern = 'FILEVERSION %v', format = '@winrc'),
