--- a/MonetDB5/src/extras/crackers/Makefile.ag
+++ b/MonetDB5/src/extras/crackers/Makefile.ag
@@ -16,7 +16,7 @@
 # All Rights Reserved.
 
 INCLUDES = -I../../modules/atoms -I../../modules/kernel \
-        -I../../mal $(MONETDB_INCS)
+        -I../../mal $(monetdbcommon_CFLAGS)
 
 MTSAFE
 
@@ -28,7 +28,7 @@ lib_crackers = {
 		crackers_core_ordered.mx crackers_core_unordered.mx crackers_validation.mx \
 		crackers_joinselect_ops.mx crackers_select_ops.mx crackers_sideways.mx crackers_partial_sideways.mx crackers_updates.mx crackers_joins.mx crackers_sortmerge.mx crackers_crackmerge.mx crackers_pq.mx \
 		crackers_populate.mx
-	LIBS = ../../tools/libmonetdb5 $(MONETDB_LIBS) -lbat \
+	LIBS = ../../tools/libmonetdb5 $(monetdbcommon_LIBS) \
                 $(MALLOC_LIBS)
 }
 
