--- a/MonetDB5/src/optimizer/Makefile.ag
+++ b/MonetDB5/src/optimizer/Makefile.ag
@@ -15,8 +15,8 @@
 # Copyright August 2008-2010 MonetDB B.V.
 # All Rights Reserved.
 
-INCLUDES = -I../mal -I../modules/atoms -I../modules/mal -I../modules/kernel $(CLIENTS_INCS) $(MONETDB_INCS) \
-	$(Z_CFLAGS) $(BZ_CFLAGS) $(PCRE_CFLAGS)
+INCLUDES = -I../mal -I../modules/atoms -I../modules/mal -I../modules/kernel \
+	$(monetdbmapi_CFLAGS) $(monetdbcommon_CFLAGS) $(monetdbstream_CFLAGS)
 
 
 MTSAFE
