Use MCgetClient to retrieve MAL client records
For a reason we do not yet completely understand, this used to work
fine, but now it doesn't.  Referencing mal_clients yields in another
address from modules, resulting in not the intended behaviour.  Use
MCgetClient to ensure that we retrieve the mal_client records from
mserver5, which does the main handling of clients.

--- a/sql/src/backends/monet5/embeddedclient.c.in
+++ b/sql/src/backends/monet5/embeddedclient.c.in
@@ -108,7 +108,7 @@ start_sql_server(void *arg)
 		"in  := \"" PTRFMT "\":streams;\n"
 		"out := \"" PTRFMT "\":streams;\n"
 		"mapi.malclient(in, out);\n", PTRFMTCAST in, PTRFMTCAST out);
-	callString(mal_clients, buf, 0);
+	callString(MCgetClient(CONSOLE), buf, 0);
 	return 0;
 }
 
