--- a/clients/debian/rules
+++ b/clients/debian/rules
@@ -3,4 +3,4 @@
 include /usr/share/cdbs/1/rules/debhelper.mk
 include /usr/share/cdbs/1/class/autotools.mk
 
-DEB_CONFIGURE_EXTRA_FLAGS := --enable-strict=no --enable-assert=no --enable-debug=no --enable-optimize=yes --with-python-libdir=/usr/lib/python2.5/site-packages
+DEB_CONFIGURE_EXTRA_FLAGS := --enable-strict=no --enable-assert=no --enable-debug=no --enable-optimize=yes
